[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/World.gd" type="Script" id=2]
[ext_resource path="res://World/Spawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/HUD/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/KillBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/Assets/Models/SpacePlat.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/DataReader.gd" type="Script" id=7]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.0823529, 0.0392157, 0.121569, 1 )
ambient_light_color = Color( 1, 1, 1, 1 )
fog_enabled = true
fog_color = Color( 0, 0, 0, 1 )
fog_sun_color = Color( 0.952941, 0.901961, 0.796078, 1 )
fog_depth_begin = 0.0
fog_transmit_enabled = true
fog_height_enabled = true

[node name="World" type="Spatial"]
transform = Transform( 1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0, 0 )
script = ExtResource( 2 )
world = 1
max_level = 5

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 2.5, 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.583, 0 )
move_speed = 4
jump_height = 1.5
jump_peak = 0.4
jump_descent = 0.25

[node name="Spawner" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20 )
x_start = 1.99
y_start = 1.66
separation = 1.2

[node name="Floor" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.584, -0.191 )
visible = false
calculate_tangents = false
collision_layer = 2
width = 5.0
height = 5.4373
depth = 5.0

[node name="PROTO_PLANET" type="CSGSphere" parent="."]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, -31.1947, 1.77, -39.4342 )

[node name="PROTO_PLANETRING" type="CSGTorus" parent="."]
transform = Transform( 4.79844, -1.40534, -3.52423e-08, 1.40534, 4.79844, 2.45719e-07, -3.52423e-08, -2.45719e-07, 5, -31.4001, 1.92731, -41.0116 )
inner_radius = 1.79395
outer_radius = 2.0639

[node name="PROTO_EARTH" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.51036e-07, -26.9314, -4.86734 )
radius = 20.6706

[node name="SpacePlat" parent="." instance=ExtResource( 6 )]

[node name="KillBox" parent="." instance=ExtResource( 5 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.986908, 0.0456909, -0.15468, 0.0646954, 0.766355, 0.639152, 0.147743, -0.640791, 0.753365, 1.73162e-07, 4.804, 4.464 )
visible = false
light_specular = 1.0

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="DataReader" type="Node" parent="."]
script = ExtResource( 7 )

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="on_level_up" from="." to="Spawner" method="_on_World_on_level_up"]
[connection signal="on_level_up" from="." to="HUD" method="_on_World_on_level_up"]
[connection signal="body_entered" from="KillBox" to="." method="_on_KillBox_body_entered"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_Timer_timeout"]
